--- a/ames-web-gui/.classpath
+++ b/ames-web-gui/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="smartgwt.jar"/>
+	<classpathentry kind="lib" path="smartgwt-skins.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
