--- a/ames-web-gui/.settings/com.google.appengine.eclipse.core.prefs
+++ b/ames-web-gui/.settings/com.google.appengine.eclipse.core.prefs
@@ -1,5 +1,5 @@
 eclipse.preferences.version=1
-filesCopiedToWebInfLib=appengine-api-labs.jar|appengine-endpoints.jar|appengine-jsr107cache-1.7.0.jar|jsr107cache-1.1.jar|appengine-api-1.0-sdk-1.7.0.jar
+filesCopiedToWebInfLib=
 gaeDatanucleusEnabled=false
 gaeHrdEnabled=true
 gaeIsEclipseDefaultInstPath=true
